add annotation to binding crd for redhat service binding operator

--- a/releases/v0.1.6/001_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.6/001_ibmcloud_v1alpha1_binding.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     controller-tools.k8s.io: "1.0"
   name: bindings.ibmcloud.ibm.com
+  annotations:
+    servicebindingoperator.redhat.io/status.secretName.url: 'binding:env:object:secret'
+    servicebindingoperator.redhat.io/status.secretName.apikey: 'binding:env:object:secret'
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
